<resources>
    <string name="app_name">Brew Assistant</string>
    <string name="hario_v60">Hario V60</string>
    <string name="aeropress">Aeropress</string>
    <string name="french_press">French Press</string>
    <string name="iced_coffee">Iced Coffee</string>
    <string name="coffee_tips">Coffee Tips</string>
    <string name="calculator">Calculator</string>
    <string name="water_in_grams">Enter water in grams</string>
    <string name="coffee_in_grams">Enter coffee in grams</string>
    <string name="v60_description">The <b>Hario V60</b> is a Japanese <i>pour-over</i> brewer.
        This means that water is poured over the water and the water travels through the bed of coffee with the help of gravity.
        It is very popular, and used by people all over the world.
    </string>
    <string name="v60_dose"><b><u>Recommended dose:</u></b>
        \n60 grams of coffee to 1000g (1L) of water.
        \nFor a half liter brew, you would use 30g of coffee and 500g of water.</string>
    <string name="v60_recipe"><b><u>Steps:</u></b>
        \n1. First boil the water, measure and grind our beans and put the filter in the V60.
        \n\n2. Wet the filter by pouring some of the boiled water through it before discarding it.
        \n\n3. Bloom the coffee by wetting all the coffee with double to triple amount of water than coffee.(For example: 60g-90g water to bloom 30g of coffee).
        \n\n4. Let the coffee bloom for 45 seconds to allow it to release CO2 gas trapped by the roasting process and unlock the flavor of the coffee.
        \n\n5. Pour water in circles starting from the center and out, and then inwards spiral, and repeat until 3/4 of water has been poured.
        \n\n6. Wait for the coffee bed to lower (about 30s) and pour the rest of the water.
        \n\n7. Carefully give the V60 a quick swirl to knock all the grounds off the walls of the filter.
        \n\n8. Let the coffee drain while giving the occasional swirl to get an even extraction and a level coffee bed.
        \n\n9. Remove the V60 filter holder and stir the coffee with a spoon before pouring into cups.
        \n\n10. Serve the coffee and enjoy the fresh brew!
    </string>
    <string name="aeropress_description">The <b>Aeropress</b> is an <u>immersion</u> brewer, which means that water and coffee is left brewing together over time, rather than poured through the coffee in a filter.</string>
    <string name="aeropress_dose"><b><u>Recommended dose:</u></b>
        \n68 grams of coffee to 1000g (1L) of water.
        \nFor one cup brew, you would use 17g of coffee and 250g of water.</string>
    <string name="aeropress_recipe"><b><u>Steps:</u></b>
        \n1. First boil the water, measure and grind the beans and put a filter in the filter-cap.
        \n\n2. Fasten the filter holder in the mid part of the Aeropress, and place it on a cup.
        \n\n3. Pre-heat the Aeropress and wet the filter by pouring hot water through it before discarding the water.
        \n\n4. Place the cup with the Aeroress on the scale. Add the coffee in to the Aeropress, start the timer and pour water until 250mL. Insert the piston carefully into the middle part to create a vacuum.
        \n\n5. At the 1:00 mark, remove the piston, stir around with a spoon and put the piston back in.
        \n\n6. At 1:30 minutes, remove the cup from the scale, and then start pressing down gently without using force. Stop when you hear a "hissing" sound.
        \n\n7. Remove the Aeropress from the cup, and press out the remaining water in to a sink, and discard the coffee puck in to the recycling bin. Clean the Aeropress by rinsing it well under warm water.
        \n\n8. Enjoy the fresh cup of coffee!
    </string>
    <string name="french_press_description">The <b>French Press</b> is a classic <u>immersion</u> brewer, and it uses the most basic principles of brewing to make a rich, enjoyable cup with a lot of body.</string>
    <string name="french_press_dose"><b><u>Recommended dose:</u></b>
        \n75 grams of coffee to 1000g (1L) of water.
        \nFor a half liter brew, you would use 37,5g of coffee and 500g of water.
    </string>
    <string name="french_press_recipe"><b><u>Steps:</u></b>
        \n1. First boil the water, measure and grind the beans.
        \n\n2. Pre-heat the French Press including the plunger with boiling water before discarding the water.
        \n\n3. Take out the plunger, put the French Press on the scale and add the coffee. Remember to tare the scale so it starts at zero.
        \n\n4. Start the timer before adding the water quickly and controlled to wet all the coffee.
        \n\n5. Put the plunger into the top part of the French Press, without it touching the coffee for it to trap the heat in the brewer.
        \n\n6. When the timer hits 3:45 minutes, take out the plunger and stir the coffee with a spoon.
        \n\n7. I recommend to let the coffee sit for additionally 3-4 minutes after this, with the plunger in, to let all the coffee grounds sink to the bottom.
        \n\n8. After all the coffee is at the bottom, plunge carefully half-way and decant slowly and carefully to avoid getting the "sludge" at the bottom.
        \n\n9. Enjoy a clean, full-bodied cup of coffee!
    </string>
    <string name="iced_coffee_description"><b>Flash brew</b>, or <b>Japanese Iced Coffee</b> is a simple way of making use of all the flavour in the coffee beans and enjoying them chilled.
    The name <i>Flash Brew</i> comes from the fact that it is brewed like the V60, but part of the water is replaced with iced cubes. This results in the hot coffee dripping down on the ice, and it gets chilled instantly <i>in a flash.</i>
    </string>
    <string name="iced_coffee_dose"><b><u>Recommended dose:</u></b>
        \n60 grams of coffee to 1000g (1L) of water.
        \nFor a half liter brew, you would use 30g of coffee and 500g of water.
    </string>
    <string name="iced_coffee_recipe"><b><u>Steps:</u></b>
        \nI recommend following the instructions for V60, but with these changes:
        \n\n1. Grind a little finer than usual, as we use less water we want to extract as much as possible.
        \n\n2. Replace 40% of the water with ice cubes, and put the cubes directly in the server while brewing. One gram of water equals one gram of ice.
        \n\n3. After brewing, swirl or stir the server carefully to chill the coffee and melt all the ice.
        \n\n4. Serve the coffee in a chilled glass, and optionally with more ice cubes. Keep in mind that the ice will dilute the coffee further when it melts.
        \n\n5. Enjoy on a hot and sunny day for maximum refreshing effect!
    </string>
    <string name="coffee_tips_description">Great coffee is something everybody can make, and by following some simple guidelines, it will result in <b>great</b> coffee <i>every</i> time.
    </string>
    <string name="coffee_tips_list"><b><u>Tips:</u></b>
        \n\n<b>Water:</b> Always use fresh, clean water. The water should be odorless, clear, fresh and good to drink.
        \n\n<b>Clean Equipment:</b> Always use clean equipment, as old coffee grounds will produce bad tasting components in your coffee. You only want to taste the fresh beans you just ground and put into your coffee maker.
        \n\n<b>Grinder:</b> I recommend getting a burr coffee grinder. This way you will be able to enjoy your beans in the freshest way possible, and you can grind the beans according to the brewing method. Some methods require finer or courser grind than others.
        \n\n<b>Scale:</b> Weigh your coffee. Get a scale and weigh your coffee. Coffee brewing is a precise science, and you would want to know exactly how much coffee you are using so you can use the same dose every time.
        \n\n<b>Timer:</b> Time your brews. This makes it easier to bloom your coffee, and it gives an indication if the coffee is ground too fine or too course. There are scales with built in timers available.
        \n\n<b>Use fresh coffee beans.</b> If you are unsure which coffee to buy, ask the local coffee shop for recommendations. Baristas almost always know the coffees they are selling, and can give information about taste notes, and give recommendations based on brewing method.
        \n\n<b>Make notes:</b> It is a good idea to write down your recipes, as you will be able to remake the great cup you made the last time, or you can make changes to your recipe one factor at a time.
        \n\n<b>Brewing Time:</b> If your coffee takes too long to brew or is too fast, grind setting is the only factor you need to change. Use the same dose of coffee and same amount of water, and only change the grind setting, and you will be able to find the optimal setting for a perfect cup.
        \n\n<b>Enjoy your coffee.</b> Coffee can get very technical very fast. Don\'t get too hung up on the details when brewing. As long as your coffee tastes great, you have already done a lot right.
    </string>
    <string name="cold_brew_description"><b>Cold Brew</b> has become very popular lately. It is a way of brewing coffee using cold water and letting it sit in room temperature for 8-24 hours.
        Cold Brew is very different from brewing with hot water, and it can tone down the acidity in the coffee and highlight notes that you would not usually get in a hot brew with the same coffee.
    </string>
    <string name="cold_brew_dose">Generally, you can create a <i>ready-to-drink</i> cold brew or a <i>concentrate</i> to dilute with water, milk or other milk-substitutes. For <b>ready-to-drink cold brew</b> I recommend using a recipe of 70g of coffee per liter water.
        For <b>concentrate</b> I recommend using a dose of 125g coffee per liter of water. </string>
    <string name="cold_brew_recipe"><b><u>Steps:</u></b>
    \n\n1. Find a container to brew the coffee in, for example a french press, a jar or a bowl.
    \n\n2. Measure water, coffee and grind your coffee. A medium grind will be great here, somewhere between V60 and french press.
    \n\n3. Either add your coffee to a paper filter and close it, or add your coffee directly to your water.
    \n\n4. Make sure all the coffee is saturated with water.
    \n\n5. Set in room temperature for the desired time.
    \n\n6. When your coffee is done brewing, remove the filter with coffee and let it drain. If you did not use a filter, you can now filter your coffee through for example a V60 or similar.
    \n\n7. Pour your fresh cold brew into a bottle with a cap and let it cool in the fridge. It is good up to 14 days when kept cold.
    \n\n8. Serve over ice and optionally dilute with water or your favourite milk-substitute.
    \n\n9. Enjoy a round and tasty brew with low acidity.
    </string>
    <string name="about_page">My name is <b>Kasander</b>, and I <i>love</i> coffee!
        \n\nIn this app I have gathered all my favourite recipes for different coffee brewing methods I have experience with. I have not included espresso, as this is another big and exciting part of the coffee world.
        \n
        \n\nCreated by a coffee lover and former barista.
        \n\nSuggestions and feedback are very welcome!

    </string>
    <string name="main_activity_header_description">Main Activity Header</string>
    <string name="cold_brew_header_description">Cold Brew Header</string>
    <string name="hario_v60_button_description">Hario V60 Button</string>
    <string name="aeropress_button_description">Aeropress Button</string>
    <string name="french_press_button_description">French Press Button</string>
    <string name="iced_coffee_button_description">Iced Coffee Button</string>
    <string name="coffee_tips_button_description">Coffee Tips Button</string>
    <string name="calculator_button_description">Calculator Button</string>
    <string name="cold_brew">Cold Brew</string>
    <string name="cold_brew_button_description">Cold Brew Button</string>
</resources>