<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_fade"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_view_main"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:scaleType="centerCrop"
        android:src="@drawable/image_coffee_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/main_activity_header_description" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_main">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingBottom="24dp"
            android:layout_marginBottom="24dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_v60"
                android:layout_width="135dp"
                android:layout_height="135dp"
                app:cardCornerRadius="6dp"
                app:layout_constraintEnd_toStartOf="@id/card_view_aeropress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_card_view_main"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/image_view_card_v60"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/icon_v60"
                        android:contentDescription="@string/hario_v60_button_description" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/latte_light"
                        android:layout_below="@+id/image_view_card_v60"
                        android:layout_centerInParent="true"
                        android:text="@string/hario_v60"
                        android:textSize="18sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_aeropress"
                android:layout_width="135dp"
                android:layout_height="135dp"
                app:cardCornerRadius="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/card_view_v60"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_card_view_main"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/image_view_card_aeropress"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/icon_aeropress"
                        android:contentDescription="@string/aeropress_button_description" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/image_view_card_aeropress"
                        android:layout_centerInParent="true"
                        android:textColor="@color/latte_light"
                        android:text="@string/aeropress"
                        android:textSize="18sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_french_press"
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="6dp"
                app:layout_constraintEnd_toStartOf="@id/card_view_iced_coffee"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_view_v60">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_card_view_main"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/image_view_card_french_press"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/icon_french_press"
                        android:contentDescription="@string/french_press_button_description" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/latte_light"
                        android:layout_below="@+id/image_view_card_french_press"
                        android:layout_centerInParent="true"
                        android:text="@string/french_press"
                        android:textSize="18sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_iced_coffee"
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/card_view_french_press"
                app:layout_constraintTop_toBottomOf="@id/card_view_aeropress">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_card_view_main"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/image_view_card_iced_coffee"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/icon_iced_coffee"
                        android:contentDescription="@string/iced_coffee_button_description" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/latte_light"
                        android:layout_below="@+id/image_view_card_iced_coffee"
                        android:layout_centerInParent="true"
                        android:text="@string/iced_coffee"
                        android:textSize="18sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_coffee_tips"
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                app:cardCornerRadius="6dp"
                app:layout_constraintEnd_toStartOf="@id/card_view_aeropress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_view_french_press">

                <!--                       app:layout_constraintBottom_toTopOf="@id/card_view_cold_brew"
                                app:layout_constraintBottom_toBottomOf="parent"

         -->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_card_view_main"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/image_view_card_coffee_tips"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/icon_coffee_cup"
                        android:contentDescription="@string/coffee_tips_button_description" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/image_view_card_coffee_tips"
                        android:layout_centerInParent="true"
                        android:textColor="@color/latte_light"
                        android:text="@string/coffee_tips"
                        android:textSize="18sp" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_calculator"
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                app:cardCornerRadius="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/card_view_coffee_tips"
                app:layout_constraintTop_toBottomOf="@id/card_view_iced_coffee">

<!--                       app:layout_constraintBottom_toTopOf="@id/card_view_cold_brew"
                app:layout_constraintBottom_toBottomOf="parent"

         -->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_card_view_main"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/image_view_card_calculator"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/icon_calculator"
                        android:contentDescription="@string/calculator_button_description" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/image_view_card_calculator"
                        android:layout_centerInParent="true"
                        android:text="@string/calculator"
                        android:textColor="@color/latte_light"
                        android:textSize="18sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_cold_brew"
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                app:cardCornerRadius="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_view_coffee_tips">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_card_view_main"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/image_view_card_cold_brew"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/cold_brew_button_description"
                        android:src="@drawable/icon_calculator" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/image_view_card_cold_brew"
                        android:layout_centerInParent="true"
                        android:text="@string/cold_brew"
                        android:textColor="@color/latte_light"
                        android:textSize="18sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>